# LabSupply-2025-2026

./: #auto_saved_files#  LabSupply 2025-2026.kicad_prl  LabSupply 2025-2026.kicad_pro  LabSupply 2025-2026.kicad_sch  README.md  debugging_mistakes_error_toho_howto.txt  manual_napajeci_zdroj.md  todo,mistakes etc.txt
3D files/: 100W 24V power supply.SLDPRT  60mm fan.SLDPRT  BackPanel1.SLDPRT  Banana simple_negro.SLDASM  Banana simple_rojo.SLDASM  BottomPanel1.SLDPRT  Fan protection grill 55023 - 60mm X 60mm.SLDPRT  FrontPanel1.SLDPRT  Fuse Holder 5x20mm v1.SLDPRT  LeftPanel1.SLDPRT  NF-004 FIX&FASTEN - Nožička.SLDPRT  Power Switch R59-5BRBT2-G.SLDPRT  RightPanel1.SLDPRT  SOLID.SLDPRT  TopPanel1.SLDPRT  USB-C PD trigger board.SLDPRT  all wood boards.SLDPRT  big inductor.SLDPRT  button handle tapered hole V1 AMS.SLDPRT  button handle tapered hole V1 AMS.STL  button handle tapered hole V1.SLDPRT  button handle tapered hole V2 AMS.SLDPRT  button handle tapered hole V2 NO_AMS.SLDPRT  cherry mx buttons soldering guide v1.SLDPRT  heatsink Al ZH0137 115x64x100mm.SLDPRT  iec320_703W-00_04.SLDPRT  knob1.SLDPRT  panel XT60IE-M.SLDPRT
Code/: CMakeLists.txt  firmware2.uf2  platformio.ini  temp_colors.txt
Code/include/: ADC_measurement.h  cal_menu.h  display.h  flash_store.h  mcp23s17.h  mcp4728.h  peripherals.h  psu_control.h  psu_types.h  st7735.h
Code/src/: ADC_measurement.c  cal_menu.cpp  display.cpp  flash_store.cpp  main.cpp  mcp23s17.c  mcp4728.cpp  peripherals.cpp  psu_control.cpp  st7735.c
KiCad soubory/: todo,mistakes etc.txt
Kompilované programy/: firmware3.uf2  (+1 more)
(+184 files in other folders)
